Bug 489903 - Recording is not saved as MP3 even if selected.
Summary: Recording is not saved as MP3 even if selected.
Status: RESOLVED FIXED
Alias: None
Product: krecorder
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Devin Lin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-08 06:32 UTC by Debayan Sutradhar
Modified: 2025-07-23 16:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Debayan Sutradhar 2024-07-08 06:32:59 UTC
SUMMARY

I am trying to record in MP3 format. I selected "Audio Codec" as MP3, and Container format as "MPEG-4 Audio". However, it keeps recording in ".wmv"

There is a text note at the bottom that says some combinations of codec and formats are not compatible, is this related?

STEPS TO REPRODUCE
1. Select Audio Codec as MP3
2. Select Container format as MPEG-4 Audio
3. Record

OBSERVED RESULT
Audio recording is still stored as .wmv

EXPECTED RESULT
Audio recording should be stored as .mp3

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.9.7/6.1.2
(available in About System)
KDE Plasma Version: 6.1.2
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION
I am using openSUSE tumbleweed 20240704 snapshot.
Comment 1 Ghislain Vaillant 2024-08-27 07:33:18 UTC
Same here when choosing FLAC. Looks like whatever file format combination is chosen through the configuration menu, it is not taken into account when recording.
Comment 2 Bug Janitor Service 2025-07-23 14:16:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/krecorder/-/merge_requests/53
Comment 3 Devin Lin 2025-07-23 15:56:03 UTC
Git commit eeb0ede89ccadca8691ccc449b082abee5ce637f by Devin Lin, on behalf of Balló György.
Committed on 23/07/2025 at 15:54.
Pushed by devinlin into branch 'master'.

Fix saving and loading format settings

This ensures that the container format, audio codec and audio quality
settings are loaded, saved and monitored properly.
Related: bug 492292, bug 501920

M  +61   -13   src/audiorecorder.cpp
M  +9    -6    src/audiorecorder.h
M  +5    -1    src/contents/ui/settings/SettingsComponent.qml
M  +3    -3    src/settingsmodel.cpp

https://invent.kde.org/utilities/krecorder/-/commit/eeb0ede89ccadca8691ccc449b082abee5ce637f
Comment 4 Devin Lin 2025-07-23 16:00:31 UTC
Git commit 68a5379a7a6a4421db11ab16404f6617da666cf4 by Devin Lin, on behalf of Balló György.
Committed on 23/07/2025 at 15:59.
Pushed by devinlin into branch 'release/25.08'.

Fix saving and loading format settings

This ensures that the container format, audio codec and audio quality
settings are loaded, saved and monitored properly.
Related: bug 492292, bug 501920

M  +61   -13   src/audiorecorder.cpp
M  +9    -6    src/audiorecorder.h
M  +5    -1    src/contents/ui/settings/SettingsComponent.qml
M  +3    -3    src/settingsmodel.cpp

https://invent.kde.org/utilities/krecorder/-/commit/68a5379a7a6a4421db11ab16404f6617da666cf4