Fix saving and loading format settings

This ensures that the container format, audio codec and audio quality
settings are loaded, saved and monitored properly.

BUG: 489903
BUG: 492292
BUG: 501920